# 2ndGeneticAlg

./: CMakeLists.txt  architecture.md  main.cpp  Отчет_Таблы.xlsx
Graphics/: main.py  pareto_final.txt
